<resources>
    <string name="app_name">My Debts</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="f_debts">For Me</string>
    <string name="o_debts">On Me</string>
    <string name="add_customer">Add Customer</string>
    <string name="btn_add_customer">Add this customer</string>
    <string name="edit_customer">Edit Customer</string>
    <string name="btn_edit_customer">Edit this customer</string>
    <string name="name">Name</string>
    <string name="name_hint">Enter his name</string>
    <string name="btn_add_debt">Add this debt</string>
    <string name="phone">Phone</string>
    <string name="phone_hint">Enter his phone number</string>
    <string name="debt">Debt</string>
    <string name="debt_hint">Enter the debt</string>
    <string name="add">Add</string>
    <string name="description">Description</string>
    <string name="description_hint">Enter a description if you want</string>
    <string name="image">Image</string>
    <string name="image_hint">Image for the selled goods</string>
</resources>