<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView" />
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/addCustomerM"
        android:title="@string/add_customer" />
    <item
        android:id="@+id/about"
        android:title="@string/about" />
    <item
        android:id="@+id/exit"
        android:title="@string/exit" />
</menu>