<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addCustomerL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="3"
                android:gravity="center"
                android:textSize="30sp"
                android:text="@string/name" />

            <EditText
                android:id="@+id/edtNameCA"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="7"
                android:inputType="textPersonName"
                android:hint="@string/name_hint" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="3"
                android:gravity="center"
                android:textSize="30sp"
                android:text="@string/phone" />

            <EditText
                android:id="@+id/edtPhoneCA"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="7"
                android:ems="10"
                android:inputType="phone"
                android:hint="@string/phone_hint" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="3"
                android:gravity="center"
                android:textSize="30sp"
                android:text="@string/debt" />

            <EditText
                android:id="@+id/edtDebtCA"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="7"
                android:inputType="number"
                android:hint="@string/debt_hint" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="3"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/description" />

        <EditText
            android:id="@+id/edtDescCA"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="7"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/description_hint" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <TextView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="30sp"
            android:text="@string/image" />

        <ImageView
            android:id="@+id/imageCA"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_image"
            android:contentDescription="@string/image_hint" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <Button
        android:id="@+id/btnAddCustomerCA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_add_customer"
        android:textSize="25sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />
</LinearLayout>