<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addCustomerL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="3"
                android:gravity="center"
                android:textSize="30sp"
                android:text="@string/debt" />

            <EditText
                android:id="@+id/edtDebtDA"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="7"
                android:inputType="number"
                android:hint="@string/debt_hint" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="3"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/description" />

            <EditText
                android:id="@+id/edtDescDA"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="7"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/description_hint" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

            <TextView
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:textSize="30sp"
                android:text="@string/image" />

            <ImageView
                android:id="@+id/imageDA"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_image"
                android:contentDescription="@string/image_hint" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <Button
        android:id="@+id/btnAddDebtDA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_add_debt"
        android:textSize="25sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />
</LinearLayout>