<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="400dp"
    android:layout_gravity="center"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_customer"
            android:gravity="center"
            android:textSize="30sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="3"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/name" />

            <EditText
                android:id="@+id/edtNameCE"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="7"
                android:inputType="textPersonName"
                android:hint="@string/name_hint" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="3"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/phone" />

            <EditText
                android:id="@+id/edtPhoneCE"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="7"
                android:ems="10"
                android:inputType="phone"
                android:hint="@string/phone_hint" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnEditCustomerCE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_edit_customer"
            android:textSize="25sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>
</RelativeLayout>